# Pravaaha

./: Makefile  README.md  app.py  go.mod  karnataka-latest.osm.pbf  map_builder.py  monaco-latest.osm.pbf  requirements.txt
backend/: Cargo.toml
backend/src/: api.rs  graph.rs  main.rs  osm_parser.rs  routing.rs
cmd/client/: main.go
cmd/server/: main.go
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
pkg/dashboard/: server.go
pkg/dashboard/templates/: index.html
pkg/protocol/: chunker.go  fec.go  messages.go  udp.go
pkg/storage/: queue.go  server_db.go
static/: app.js  index.html  style.css
