[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
osmpbfreader = "0.16"
rstar = "0.12"
petgraph = "0.6"
tower-http = { version = "0.5", features = ["cors"] }
